# IMACRUN

./: .gitignore  CMakeLists.txt  README.md
GAME/: App.cpp  enemy.cpp  floor.cpp  light.cpp  main.cpp  map.cpp  obstacle.cpp  player.cpp  skybox.cpp  wall.cpp
GAME/gamemap/: cube.cpp  floor.cpp  game.cpp  gamemap.cpp  obstacle.cpp  skybox.cpp  wall.cpp
GAME/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
GAME/lighting/: light.cpp
GAME/players/: enemy.cpp  player.cpp
GAME/shaders/: model_loading.fs  model_loading.vs  multipleLights.fs  objet3D.vs
GAME/textrendering/: textrendering.cpp
TP1/: App.cpp  App.hpp  main.cpp
TP2/: App.hpp  main.cpp
TP2/shaders/: skybox.fs
TP9/: main.cpp
assets/: map.pgm  map16.pgm  scores.json  vraie_vraie_map_carree.pgm
assets/maps/: celle_la_cest_la_bonne.PGM  petite_map.pgm  vraie_vraie_map_rectangle.pgm
assets/models/: flash.mtl  franck.mtl  lightning_bolt.mtl
lib/: camera.h
lib/GAME_H/: App.hpp  camera.h  cube.hpp  element.hpp  enemy.hpp  eyeCamera.hpp  floor.hpp  game.hpp  gamemap.hpp  light.hpp  map.hpp  mesh.hpp  model.hpp  obstacle.hpp  player.hpp  sceneLight.hpp  shader_m.h  shader_s.h  skybox.hpp  space.hpp  textrendering.hpp  trackballCamera.hpp  utilityFunction.hpp  wall.hpp
lib/GAME_H/3dmodels/: mesh.hpp  model.hpp
lib/GAME_H/gamemap/: element.hpp  floor.hpp  gamemap.hpp  obstacle.hpp  skybox.hpp  space.hpp  wall.hpp
lib/GAME_H/lighting/: light.hpp
lib/GAME_H/player/: camera.hpp  enemy.hpp  eyeCamera.hpp  player.hpp  trackballCamera.hpp
lib/GAME_H/utilities/: shader_m.hpp  utilityFunction.hpp
